--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <canvas id="canvas"></canvas>
     <script src="util.js"></script>
     <script src="board.js"></script>
-    <script src="peices.js"></script>
+    <script src="pieces.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
